--- a/VKDL/VKDL.vcxproj
+++ b/VKDL/VKDL.vcxproj
@@ -19,12 +19,35 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\window\platform_window.hpp" />
-    <ClInclude Include="include\VKDL.hpp" />
-    <ClInclude Include="src\platforms\windows_platform_window_impl.hpp" />
+    <ClInclude Include="include\vkdl\core\config.h" />
+    <ClInclude Include="include\vkdl\core\context.h" />
+    <ClInclude Include="include\vkdl\core\exception.h" />
+    <ClInclude Include="include\vkdl\core\include_vulkan.h" />
+    <ClInclude Include="include\vkdl\math\rect.h" />
+    <ClInclude Include="include\vkdl\math\vector_type.h" />
+    <ClInclude Include="include\vkdl\pipeline_builder.h" />
+    <ClInclude Include="include\vkdl\system\cursor.h" />
+    <ClInclude Include="include\vkdl\system\event_msg.h" />
+    <ClInclude Include="include\vkdl\system\keyboard.h" />
+    <ClInclude Include="include\vkdl\system\mouse.h" />
+    <ClInclude Include="include\vkdl\util\delegate.hpp" />
+    <ClInclude Include="include\vkdl\util\event.hpp" />
+    <ClInclude Include="include\vkdl\util\flags.h" />
+    <ClInclude Include="include\vkdl\system\platform_window.h" />
+    <ClInclude Include="include\vkdl\util\property.hpp" />
+    <ClInclude Include="include\vkdl\VKDL.hpp" />
+    <ClInclude Include="src\platforms\platform_window_base.h" />
+    <ClInclude Include="src\platforms\windows_cursor_impl.h" />
+    <ClInclude Include="src\platforms\windows_platform_window_impl.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\context.cpp" />
+    <ClCompile Include="src\platforms\cursor.cpp" />
+    <ClCompile Include="src\platforms\keyboard.cpp" />
+    <ClCompile Include="src\platforms\mouse.cpp" />
     <ClCompile Include="src\platforms\platform_window.cpp" />
+    <ClCompile Include="src\platforms\windows_keyboard_impl.h" />
+    <ClCompile Include="src\platforms\windows_mouse_impl.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
@@ -48,17 +71,17 @@
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -78,6 +101,12 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <OutDir>$(ProjectDir)lib\$(Configuration)\</OutDir>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <OutDir>$(ProjectDir)lib\$(Configuration)\</OutDir>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -112,6 +141,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(VULKAN_SDK)\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -126,6 +157,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(VULKAN_SDK)\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
